# word2vec

./: CMakeLists.txt  word2vec.c
